lacrex-webapp/src/antlr/grammars/LaCreXParser.ts
// Generated from antlr/grammars/LaCreXParser.g4 by ANTLR 4.13.1
// noinspection ES6UnusedImports,JSUnusedGlobalSymbols,JSUnusedLocalSymbols

import {
	ATN,
	ATNDeserializer,
	DFA,
	DecisionState,
	FailedPredicateException,
	NoViableAltException,
	Parser,
	ParserATNSimulator,
	ParserRuleContext,
	PredictionContextCache,
	RecognitionException,
	TerminalNode,
	Token,
	TokenStream
} from 'antlr4'
import LaCreXParserVisitor from './LaCreXParserVisitor.js'

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number

export default class LaCreXParser extends Parser {
  public static readonly WhiteSpace = 1
  public static readonly VIRGULA = 2
  public static readonly PONTOEVIRGULA = 3
  public static readonly LPAREN = 4
  public static readonly RPAREN = 5
  public static readonly LCURLY = 6
  public static readonly RCURLY = 7
  public static readonly SE = 8
  public static readonly SENAO = 9
  public static readonly FOREACH = 10
  public static readonly WHILE = 11
  public static readonly MAIN = 12
  public static readonly DEFINE_FUNCAO = 13
  public static readonly TIPOS = 14
  public static readonly BOOLEANO = 15
  public static readonly PALAVRA = 16
  public static readonly NOME_VARIAVEL = 17
  public static readonly DIGITO = 18
  public static readonly DECREMENTO_OU_INCREMENTO = 19
  public static readonly NULAVEL = 20
  public static readonly OPERADOR_ATRIBUICAO = 21
  public static readonly OPERADOR_CONDICIONAL = 22
  public static readonly OPERADOR_ARITMETICO = 23
  public static readonly EOF = Token.EOF
  public static readonly RULE_programa = 0
  public static readonly RULE_expressao = 1
  public static readonly RULE_atribuicao = 2
  public static readonly RULE_define_funcao = 3
  public static readonly RULE_main = 4
  public static readonly RULE_lista_argumentos = 5
  public static readonly RULE_argumento = 6
  public static readonly RULE_bloco_then = 7
  public static readonly RULE_condicional_se = 8
  public static readonly RULE_condicional = 9
  public static readonly RULE_foreach = 10
  public static readonly RULE_while = 11
  public static readonly RULE_operador_modificador = 12
  public static readonly RULE_atribuicao_ou_operador_modificador = 13
  public static readonly RULE_valor = 14
  public static readonly RULE_funcao_matematica = 15
  public static readonly literalNames: (string | null)[] = [
    null,
    null,
    "','",
    "';'",
    "'('",
    "')'",
    "'{'",
    "'}'",
    "'elu'",
    "'delu'",
    "'segue o fio'",
    "'comofas'",
    "'o codigo de milhoes'",
    "'qualquer coisa avisa'",
    null,
    null,
    null,
    null,
    null,
    null,
    "'cancelado'",
    "'\\uD83D\uDC8B'",
  ]

  public static readonly symbolicNames: (string | null)[] = [
    null,
    'WhiteSpace',
    'VIRGULA',
    'PONTOEVIRGULA',
    'LPAREN',
    'RPAREN',
    'LCURLY',
    'RCURLY',
    'SE',
    'SENAO',
    'FOREACH',
    'WHILE',
    'MAIN',
    'DEFINE_FUNCAO',
    'TIPOS',
    'BOOLEANO',
    'PALAVRA',
    'NOME_VARIAVEL',
    'DIGITO',
    'DECREMENTO_OU_INCREMENTO',
    'NULAVEL',
    'OPERADOR_ATRIBUICAO',
    'OPERADOR_CONDICIONAL',
    'OPERADOR_ARITMETICO',
  ]

  // tslint:disable:no-trailing-whitespace
  public static readonly ruleNames: string[] = [
    'programa',
    'expressao',
    'atribuicao',
    'define_funcao',
    'main',
    'lista_argumentos',
    'argumento',
    'bloco_then',
    'condicional_se',
    'condicional',
    'foreach',
    'while',
    'operador_modificador',
    'atribuicao_ou_operador_modificador',
    'valor',
    'funcao_matematica',
  ]

  public get grammarFileName(): string {
    return 'LaCreXParser.g4'
  }

  public get literalNames(): (string | null)[] {
    return LaCreXParser.literalNames
  }

  public get symbolicNames(): (string | null)[] {
    return LaCreXParser.symbolicNames
  }

  public get ruleNames(): string[] {
    return LaCreXParser.ruleNames
  }

  public get serializedATN(): number[] {
    return LaCreXParser._serializedATN
  }

  protected createFailedPredicateException(
    predicate?: string,
    message?: string,
  ): FailedPredicateException {
    return new FailedPredicateException(this, predicate, message)
  }

  constructor(input: TokenStream) {
    super(input)
    this._interp = new ParserATNSimulator(
      this,
      LaCreXParser._ATN,
      LaCreXParser.DecisionsToDFA,
      new PredictionContextCache(),
    )
  }

  // @RuleVersion(0)
  public programa(): ProgramaContext {
    const localctx: ProgramaContext = new ProgramaContext(
      this,
      this._ctx,
      this.state,
    )
    this.enterRule(localctx, 0, LaCreXParser.RULE_programa)
    let _la: number
    try {
      this.enterOuterAlt(localctx, 1)
      {
        this.state = 35
        this._errHandler.sync(this)
        _la = this._input.LA(1)
        while (_la === 14) {
          {
            {
              this.state = 32
              this.define_funcao()
            }
          }
          this.state = 37
          this._errHandler.sync(this)
          _la = this._input.LA(1)
        }
        this.state = 38
        this.main()
        this.state = 39
        this.match(LaCreXParser.EOF)
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        localctx.exception = re
        this._errHandler.reportError(this, re)
        this._errHandler.recover(this, re)
      } else {
        throw re
      }
    } finally {
      this.exitRule()
    }
    return localctx
  }

  // @RuleVersion(0)
  public expressao(): ExpressaoContext {
    const localctx: ExpressaoContext = new ExpressaoContext(
      this,
      this._ctx,
      this.state,
    )
    this.enterRule(localctx, 2, LaCreXParser.RULE_expressao)
    try {
      this.enterOuterAlt(localctx, 1)
      {
        this.state = 48
        this._errHandler.sync(this)
        switch (this._interp.adaptivePredict(this._input, 1, this._ctx)) {
          case 1:
            {
              this.state = 41
              this.atribuicao()
            }
            break
          case 2:
            {
              this.state = 42
              this.condicional_se()
            }
            break
          case 3:
            {
              this.state = 43
              this.foreach()
            }
            break
          case 4:
            {
              this.state = 44
              this.while_()
            }
            break
          case 5:
            {
              {
                this.state = 45
                this.operador_modificador()
              }
            }
            break
          case 6:
            {
              this.state = 46
              this.funcao_matematica()
            }
            break
          case 7:
            {
              this.state = 47
              this.atribuicao_ou_operador_modificador()
            }
            break
        }
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        localctx.exception = re
        this._errHandler.reportError(this, re)
        this._errHandler.recover(this, re)
      } else {
        throw re
      }
    } finally {
      this.exitRule()
    }
    return localctx
  }

  // @RuleVersion(0)
  public atribuicao(): AtribuicaoContext {
    const localctx: AtribuicaoContext = new AtribuicaoContext(
      this,
      this._ctx,
      this.state,
    )
    this.enterRule(localctx, 4, LaCreXParser.RULE_atribuicao)
    let _la: number
    try {
      this.enterOuterAlt(localctx, 1)
      {
        this.state = 51
        this._errHandler.sync(this)
        _la = this._input.LA(1)
        if (_la === 14) {
          {
            this.state = 50
            this.match(LaCreXParser.TIPOS)
          }
        }

        this.state = 53
        this.match(LaCreXParser.NOME_VARIAVEL)
        this.state = 58
        this._errHandler.sync(this)
        _la = this._input.LA(1)
        while (_la === 2) {
          {
            {
              this.state = 54
              this.match(LaCreXParser.VIRGULA)
              this.state = 55
              this.match(LaCreXParser.NOME_VARIAVEL)
            }
          }
          this.state = 60
          this._errHandler.sync(this)
          _la = this._input.LA(1)
        }
        this.state = 72
        this._errHandler.sync(this)
        switch (this._interp.adaptivePredict(this._input, 4, this._ctx)) {
          case 1:
            {
              this.state = 61
              this.match(LaCreXParser.OPERADOR_ATRIBUICAO)
              this.state = 62
              this.valor()
            }
            break
          case 2:
            {
              this.state = 63
              this.match(LaCreXParser.OPERADOR_CONDICIONAL)
              this.state = 64
              this.match(LaCreXParser.NOME_VARIAVEL)
            }
            break
          case 3:
            {
              this.state = 65
              this.match(LaCreXParser.OPERADOR_ATRIBUICAO)
              this.state = 66
              this.valor()
            }
            break
          case 4:
            {
              this.state = 67
              this.match(LaCreXParser.OPERADOR_CONDICIONAL)
            }
            break
          case 5:
            {
              this.state = 68
              this.match(LaCreXParser.NOME_VARIAVEL)
            }
            break
          case 6:
            {
              this.state = 69
              this.match(LaCreXParser.OPERADOR_ATRIBUICAO)
              this.state = 70
              this.valor()
            }
            break
          case 7:
            {
              this.state = 71
              this.match(LaCreXParser.NOME_VARIAVEL)
            }
            break
        }
        {
          this.state = 74
          this.match(LaCreXParser.PONTOEVIRGULA)
        }
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        localctx.exception = re
        this._errHandler.reportError(this, re)
        this._errHandler.recover(this, re)
      } else {
        throw re
      }
    } finally {
      this.exitRule()
    }
    return localctx
  }

  // @RuleVersion(0)
  public define_funcao(): Define_funcaoContext {
    const localctx: Define_funcaoContext = new Define_funcaoContext(
      this,
      this._ctx,
      this.state,
    )
    this.enterRule(localctx, 6, LaCreXParser.RULE_define_funcao)
    let _la: number
    try {
      this.enterOuterAlt(localctx, 1)
      {
        this.state = 76
        this.match(LaCreXParser.TIPOS)
        this.state = 77
        this.match(LaCreXParser.DEFINE_FUNCAO)
        this.state = 78
        this.match(LaCreXParser.NOME_VARIAVEL)
        this.state = 79
        this.match(LaCreXParser.LPAREN)
        this.state = 81
        this._errHandler.sync(this)
        _la = this._input.LA(1)
        if (_la === 14) {
          {
            this.state = 80
            this.lista_argumentos()
          }
        }

        this.state = 83
        this.match(LaCreXParser.RPAREN)
        this.state = 84
        this.bloco_then()
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        localctx.exception = re
        this._errHandler.reportError(this, re)
        this._errHandler.recover(this, re)
      } else {
        throw re
      }
    } finally {
      this.exitRule()
    }
    return localctx
  }

  // @RuleVersion(0)
  public main(): MainContext {
    const localctx: MainContext = new MainContext(this, this._ctx, this.state)
    this.enterRule(localctx, 8, LaCreXParser.RULE_main)
    try {
      this.enterOuterAlt(localctx, 1)
      {
        this.state = 86
        this.match(LaCreXParser.MAIN)
        this.state = 87
        this.match(LaCreXParser.LPAREN)
        this.state = 88
        this.match(LaCreXParser.RPAREN)
        this.state = 89
        this.bloco_then()
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        localctx.exception = re
        this._errHandler.reportError(this, re)
        this._errHandler.recover(this, re)
      } else {
        throw re
      }
    } finally {
      this.exitRule()
    }
    return localctx
  }

  // @RuleVersion(0)
  public lista_argumentos(): Lista_argumentosContext {
    const localctx: Lista_argumentosContext = new Lista_argumentosContext(
      this,
      this._ctx,
      this.state,
    )
    this.enterRule(localctx, 10, LaCreXParser.RULE_lista_argumentos)
    let _la: number
    try {
      this.enterOuterAlt(localctx, 1)
      {
        this.state = 91
        this.argumento()
        this.state = 96
        this._errHandler.sync(this)
        _la = this._input.LA(1)
        while (_la === 3) {
          {
            {
              this.state = 92
              this.match(LaCreXParser.PONTOEVIRGULA)
              this.state = 93
              this.argumento()
            }
          }
          this.state = 98
          this._errHandler.sync(this)
          _la = this._input.LA(1)
        }
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        localctx.exception = re
        this._errHandler.reportError(this, re)
        this._errHandler.recover(this, re)
      } else {
        throw re
      }
    } finally {
      this.exitRule()
    }
    return localctx
  }

  // @RuleVersion(0)
  public argumento(): ArgumentoContext {
    const localctx: ArgumentoContext = new ArgumentoContext(
      this,
      this._ctx,
      this.state,
    )
    this.enterRule(localctx, 12, LaCreXParser.RULE_argumento)
    try {
      this.enterOuterAlt(localctx, 1)
      {
        this.state = 99
        this.match(LaCreXParser.TIPOS)
        this.state = 100
        this.match(LaCreXParser.NOME_VARIAVEL)
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        localctx.exception = re
        this._errHandler.reportError(this, re)
        this._errHandler.recover(this, re)
      } else {
        throw re
      }
    } finally {
      this.exitRule()
    }
    return localctx
  }

  // @RuleVersion(0)
  public bloco_then(): Bloco_thenContext {
    const localctx: Bloco_thenContext = new Bloco_thenContext(
      this,
      this._ctx,
      this.state,
    )
    this.enterRule(localctx, 14, LaCreXParser.RULE_bloco_then)
    let _la: number
    try {
      this.enterOuterAlt(localctx, 1)
      {
        this.state = 102
        this.match(LaCreXParser.LCURLY)
        this.state = 106
        this._errHandler.sync(this)
        _la = this._input.LA(1)
        while ((_la & ~0x1f) === 0 && ((1 << _la) & 8801536) !== 0) {
          {
            {
              this.state = 103
              this.expressao()
            }
          }
          this.state = 108
          this._errHandler.sync(this)
          _la = this._input.LA(1)
        }
        this.state = 109
        this.match(LaCreXParser.RCURLY)
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        localctx.exception = re
        this._errHandler.reportError(this, re)
        this._errHandler.recover(this, re)
      } else {
        throw re
      }
    } finally {
      this.exitRule()
    }
    return localctx
  }

  // @RuleVersion(0)
  public condicional_se(): Condicional_seContext {
    const localctx: Condicional_seContext = new Condicional_seContext(
      this,
      this._ctx,
      this.state,
    )
    this.enterRule(localctx, 16, LaCreXParser.RULE_condicional_se)
    let _la: number
    try {
      this.enterOuterAlt(localctx, 1)
      {
        this.state = 111
        this.match(LaCreXParser.SE)
        this.state = 112
        this.match(LaCreXParser.LPAREN)
        this.state = 113
        this.condicional()
        this.state = 114
        this.match(LaCreXParser.RPAREN)
        this.state = 115
        this.bloco_then()
        this.state = 125
        this._errHandler.sync(this)
        _la = this._input.LA(1)
        if (_la === 9) {
          {
            this.state = 116
            this.match(LaCreXParser.SENAO)
            this.state = 123
            this._errHandler.sync(this)
            switch (this._input.LA(1)) {
              case 4:
                {
                  this.state = 117
                  this.match(LaCreXParser.LPAREN)
                  this.state = 118
                  this.condicional()
                  this.state = 119
                  this.match(LaCreXParser.RPAREN)
                  this.state = 120
                  this.bloco_then()
                }
                break
              case 6:
                {
                  this.state = 122
                  this.bloco_then()
                }
                break
              default:
                throw new NoViableAltException(this)
            }
          }
        }
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        localctx.exception = re
        this._errHandler.reportError(this, re)
        this._errHandler.recover(this, re)
      } else {
        throw re
      }
    } finally {
      this.exitRule()
    }
    return localctx
  }

  // @RuleVersion(0)
  public condicional(): CondicionalContext {
    const localctx: CondicionalContext = new CondicionalContext(
      this,
      this._ctx,
      this.state,
    )
    this.enterRule(localctx, 18, LaCreXParser.RULE_condicional)
    let _la: number
    try {
      this.enterOuterAlt(localctx, 1)
      {
        this.state = 135
        this._errHandler.sync(this)
        _la = this._input.LA(1)
        do {
          {
            this.state = 135
            this._errHandler.sync(this)
            switch (this._interp.adaptivePredict(this._input, 10, this._ctx)) {
              case 1:
                {
                  this.state = 127
                  this.match(LaCreXParser.NOME_VARIAVEL)
                }
                break
              case 2:
                {
                  this.state = 128
                  this.match(LaCreXParser.OPERADOR_CONDICIONAL)
                }
                break
              case 3:
                {
                  this.state = 129
                  this.match(LaCreXParser.OPERADOR_ATRIBUICAO)
                  this.state = 130
                  this.match(LaCreXParser.NOME_VARIAVEL)
                }
                break
              case 4:
                {
                  this.state = 131
                  this.match(LaCreXParser.DIGITO)
                  this.state = 132
                  this.match(LaCreXParser.OPERADOR_CONDICIONAL)
                  this.state = 133
                  this.match(LaCreXParser.NOME_VARIAVEL)
                }
                break
              case 5:
                {
                  this.state = 134
                  this.match(LaCreXParser.DIGITO)
                }
                break
            }
          }
          this.state = 137
          this._errHandler.sync(this)
          _la = this._input.LA(1)
        } while ((_la & ~0x1f) === 0 && ((1 << _la) & 6684672) !== 0)
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        localctx.exception = re
        this._errHandler.reportError(this, re)
        this._errHandler.recover(this, re)
      } else {
        throw re
      }
    } finally {
      this.exitRule()
    }
    return localctx
  }

  // @RuleVersion(0)
  public foreach(): ForeachContext {
    const localctx: ForeachContext = new ForeachContext(
      this,
      this._ctx,
      this.state,
    )
    this.enterRule(localctx, 20, LaCreXParser.RULE_foreach)
    try {
      this.enterOuterAlt(localctx, 1)
      {
        this.state = 139
        this.match(LaCreXParser.FOREACH)
        this.state = 140
        this.match(LaCreXParser.LPAREN)
        this.state = 142
        this._errHandler.sync(this)
        switch (this._interp.adaptivePredict(this._input, 12, this._ctx)) {
          case 1:
            {
              this.state = 141
              this.atribuicao()
            }
            break
        }
        this.state = 144
        this.condicional()
        this.state = 145
        this.match(LaCreXParser.PONTOEVIRGULA)
        this.state = 146
        this.operador_modificador()
        this.state = 147
        this.match(LaCreXParser.RPAREN)
        this.state = 148
        this.bloco_then()
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        localctx.exception = re
        this._errHandler.reportError(this, re)
        this._errHandler.recover(this, re)
      } else {
        throw re
      }
    } finally {
      this.exitRule()
    }
    return localctx
  }

  // @RuleVersion(0)
  public while_(): WhileContext {
    const localctx: WhileContext = new WhileContext(this, this._ctx, this.state)
    this.enterRule(localctx, 22, LaCreXParser.RULE_while)
    try {
      this.enterOuterAlt(localctx, 1)
      {
        this.state = 150
        this.match(LaCreXParser.WHILE)
        this.state = 151
        this.match(LaCreXParser.LPAREN)
        this.state = 152
        this.condicional()
        this.state = 153
        this.match(LaCreXParser.RPAREN)
        this.state = 154
        this.bloco_then()
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        localctx.exception = re
        this._errHandler.reportError(this, re)
        this._errHandler.recover(this, re)
      } else {
        throw re
      }
    } finally {
      this.exitRule()
    }
    return localctx
  }

  // @RuleVersion(0)
  public operador_modificador(): Operador_modificadorContext {
    const localctx: Operador_modificadorContext =
      new Operador_modificadorContext(this, this._ctx, this.state)
    this.enterRule(localctx, 24, LaCreXParser.RULE_operador_modificador)
    try {
      this.enterOuterAlt(localctx, 1)
      {
        this.state = 156
        this.match(LaCreXParser.NOME_VARIAVEL)
        this.state = 157
        this.match(LaCreXParser.DECREMENTO_OU_INCREMENTO)
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        localctx.exception = re
        this._errHandler.reportError(this, re)
        this._errHandler.recover(this, re)
      } else {
        throw re
      }
    } finally {
      this.exitRule()
    }
    return localctx
  }

  // @RuleVersion(0)
  public atribuicao_ou_operador_modificador(): Atribuicao_ou_operador_modificadorContext {
    const localctx: Atribuicao_ou_operador_modificadorContext =
      new Atribuicao_ou_operador_modificadorContext(this, this._ctx, this.state)
    this.enterRule(
      localctx,
      26,
      LaCreXParser.RULE_atribuicao_ou_operador_modificador,
    )
    try {
      this.state = 161
      this._errHandler.sync(this)
      switch (this._interp.adaptivePredict(this._input, 13, this._ctx)) {
        case 1:
          this.enterOuterAlt(localctx, 1)
          {
            this.state = 159
            this.atribuicao()
          }
          break
        case 2:
          this.enterOuterAlt(localctx, 2)
          {
            this.state = 160
            this.operador_modificador()
          }
          break
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        localctx.exception = re
        this._errHandler.reportError(this, re)
        this._errHandler.recover(this, re)
      } else {
        throw re
      }
    } finally {
      this.exitRule()
    }
    return localctx
  }

  // @RuleVersion(0)
  public valor(): ValorContext {
    const localctx: ValorContext = new ValorContext(this, this._ctx, this.state)
    this.enterRule(localctx, 28, LaCreXParser.RULE_valor)
    let _la: number
    try {
      this.enterOuterAlt(localctx, 1)
      {
        this.state = 178
        this._errHandler.sync(this)
        switch (this._interp.adaptivePredict(this._input, 16, this._ctx)) {
          case 1:
            {
              this.state = 166
              this._errHandler.sync(this)
              _la = this._input.LA(1)
              while (_la === 18) {
                {
                  {
                    this.state = 163
                    this.match(LaCreXParser.DIGITO)
                  }
                }
                this.state = 168
                this._errHandler.sync(this)
                _la = this._input.LA(1)
              }
            }
            break
          case 2:
            {
              this.state = 169
              this.match(LaCreXParser.NULAVEL)
            }
            break
          case 3:
            {
              this.state = 170
              this.match(LaCreXParser.BOOLEANO)
            }
            break
          case 4:
            {
              this.state = 171
              this.match(LaCreXParser.PALAVRA)
            }
            break
          case 5:
            {
              this.state = 175
              this._errHandler.sync(this)
              _la = this._input.LA(1)
              while (_la === 17) {
                {
                  {
                    this.state = 172
                    this.match(LaCreXParser.NOME_VARIAVEL)
                  }
                }
                this.state = 177
                this._errHandler.sync(this)
                _la = this._input.LA(1)
              }
            }
            break
        }
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        localctx.exception = re
        this._errHandler.reportError(this, re)
        this._errHandler.recover(this, re)
      } else {
        throw re
      }
    } finally {
      this.exitRule()
    }
    return localctx
  }

  // @RuleVersion(0)
  public funcao_matematica(): Funcao_matematicaContext {
    const localctx: Funcao_matematicaContext = new Funcao_matematicaContext(
      this,
      this._ctx,
      this.state,
    )
    this.enterRule(localctx, 30, LaCreXParser.RULE_funcao_matematica)
    let _la: number
    try {
      let _alt: number
      this.enterOuterAlt(localctx, 1)
      {
        this.state = 183
        this._errHandler.sync(this)
        _la = this._input.LA(1)
        while (_la === 18) {
          {
            {
              this.state = 180
              this.match(LaCreXParser.DIGITO)
            }
          }
          this.state = 185
          this._errHandler.sync(this)
          _la = this._input.LA(1)
        }
        this.state = 186
        this.match(LaCreXParser.OPERADOR_ARITMETICO)
        this.state = 190
        this._errHandler.sync(this)
        _alt = this._interp.adaptivePredict(this._input, 18, this._ctx)
        while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
          if (_alt === 1) {
            {
              {
                this.state = 187
                this.match(LaCreXParser.DIGITO)
              }
            }
          }
          this.state = 192
          this._errHandler.sync(this)
          _alt = this._interp.adaptivePredict(this._input, 18, this._ctx)
        }
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        localctx.exception = re
        this._errHandler.reportError(this, re)
        this._errHandler.recover(this, re)
      } else {
        throw re
      }
    } finally {
      this.exitRule()
    }
    return localctx
  }
